--- a/po/fr.po
+++ b/po/fr.po
@@ -1,19 +1,28 @@
-# French translation of trader.
-# Copyright (C) 2017 Free Software Foundation, Inc.
+# *************************************************************************
+# *                                                                       *
+# *                 French Translations for Star Traders                  *
+# *                 Copyright (C) 2012-17, John Zaitseff                  *
+# *         Copyright (C) 2012-17, Free Software Foundation, Inc.         *
+# *                                                                       *
+# *************************************************************************
+#
 # This file is distributed under the same license as the trader package.
-# Frédéric Marchal <fmarchal@perso.be>, 2017.
+#
+# Contributors:
+#   Frédéric Marchal <fmarchal@perso.be>, 2012, 2015, 2017.
 #
 # Attention: ce fichier ne doit pas contenir d'espace insécable car le
-# programme est compilé avec ncurses qui n'affiche pas correctement
+# programme est compilé avec Ncurses qui n'affiche pas correctement
 # l'espace insécable. De plus, il est garanti qu'il n'y aura pas de
 # retour à la ligne forcé. Les ponctuations qui requierent un espace
 # insécable ne seront pas reportées à la ligne suivante.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: trader 7.10-pre1\n"
+"Project-Id-Version: trader 7.10-pre2\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2017-05-20 12:28+1000\n"
-"PO-Revision-Date: 2017-05-21 15:20+0200\n"
+"POT-Creation-Date: 2017-05-23 09:01+1000\n"
+"PO-Revision-Date: 2017-05-26 08:43+0200\n"
 "Last-Translator: Frédéric Marchal <fmarchal@perso.be>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "Language: fr\n"
@@ -23,42 +32,52 @@ msgstr ""
 "X-Bugs: Report translation errors to the Language-Team address.\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: data/trader.desktop.in:3 src/intf.c:610
+#. TRANSLATORS: The name of the game.  You may choose to translate it into
+#. your own language (recommended) or keep it the same as the English
+#. version.  Feel free to look through other translations to see how
+#. others have done this.
+#: data/trader.desktop.in:22 src/intf.c:610
 #, c-format
 msgid "Star Traders"
 msgstr "Star Traders"
 
-#: data/trader.desktop.in:4
+#: data/trader.desktop.in:23
 msgid "Play Star Traders, a simple game of interstellar trading"
 msgstr "Jouer à Star Traders, un simple jeu de commerce interstellaire"
 
-#: data/trader.desktop.in:5
+#. TRANSLATORS: A list of keywords describing Star Traders.  By all means
+#. add your own keywords!
+#: data/trader.desktop.in:26
 msgid "game;interstellar;trading;strategy;"
 msgstr "jeu;interstellaire;commerce;stratégie;"
 
-#: data/trader.desktop.in:6
+#. TRANSLATORS: This string is the name of the icon to use.  The Desktop
+#. Entry Specification states it is translatable, but unless you provide a
+#. matching icon, please leave it as "trader": this will use trader.svg
+#. and the various trader.png files in the data source code directory.
+#: data/trader.desktop.in:31
 msgid "trader"
-msgstr "commerce"
+msgstr "trader"
 
 #: src/trader.c:235
 #, c-format
 msgid "%s: invalid value for --max-turn: '%s'\n"
-msgstr "%s: valeur invalide pour --max-turn: « %s »\n"
+msgstr "%s: valeur invalide pour --max-turn: « %s »\n"
 
 #: src/trader.c:251
 #, c-format
 msgid "%s: invalid operand '%s'\n"
-msgstr "%s: opérande invalide « %s »\n"
+msgstr "%s: opérande invalide « %s »\n"
 
 #: src/trader.c:260
 #, c-format
 msgid "%s: invalid game number '%s'\n"
-msgstr "%s: numéro de jeu invalide « %s »\n"
+msgstr "%s: numéro de jeu invalide « %s »\n"
 
 #: src/trader.c:269
 #, c-format
 msgid "%s: extra operand '%s'\n"
-msgstr "%s: opérande surnuméraire « %s »\n"
+msgstr "%s: opérande surnuméraire « %s »\n"
 
 #. TRANSLATORS: "John Zaitseff" [IPA d͡ʒɒn ˈzaɪ̯t͡səf] is the proper
 #. name of the author.  The IPA pronunciation in this comment is in
@@ -95,7 +114,7 @@ msgstr ""
 #: src/trader.c:308
 #, c-format
 msgid "%s: Try '%s --help' for more information.\n"
-msgstr "%s: Essayez « %s --help » pour plus d'informations.\n"
+msgstr "%s: Essayez « %s --help » pour plus d'informations.\n"
 
 #: src/trader.c:311
 #, c-format
@@ -1148,12 +1167,12 @@ msgstr "%s: champ illégal à la ligne %d"
 #: src/fileio.c:51
 #, c-format
 msgid "%s: illegal field on line %d: '%s'"
-msgstr "%s: champ illégal à la ligne %d: « %s »"
+msgstr "%s: champ illégal à la ligne %d: « %s »"
 
 #: src/fileio.c:55
 #, c-format
 msgid "%s: illegal value on line %d: '%s'"
-msgstr "%s: valeur illégale à la ligne %d: « %s »"
+msgstr "%s: valeur illégale à la ligne %d: « %s »"
 
 #: src/fileio.c:91 src/fileio.c:134 src/fileio.c:402
 #, c-format
@@ -1351,12 +1370,12 @@ msgstr ""
 "peuvent aussi emprunter à la Banque Interstellaire du Commerce pour financer\n"
 "des achats supplémentaires à la bourse.\n"
 "\n"
-"La  carte  de la galaxie  est  représentée par  une grille  de ^B~x^N x ^B~y^N.  Une\n"
+"La  carte  de la galaxie  est  représentée par  une grille  de ^B~x^N × ^B~y^N.  Une\n"
 "section typique pourrait être:\n"
 "\n"
 "        ^e ~. ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
-"        ^e ~. ~. ~. ~. ~. ~. ~. ~. ~. ^N        ^e ~. ^N represente un ^Bespace vide^N,\n"
-"        ^e ~. ^s~*^e ~. ~. ~. ~. ~. ~. ~. ^N        ^s ~* ^N represente une ^Bétoile^N.\n"
+"        ^e ~. ~. ~. ~. ~. ~. ~. ~. ~. ^N        ^e ~. ^N représente un ^Bespace vide^N,\n"
+"        ^e ~. ^s~*^e ~. ~. ~. ~. ~. ~. ~. ^N        ^s ~* ^N représente une ^Bétoile^N.\n"
 "        ^e ~. ~. ~. ~. ~. ~. ~. ^s~*^e ~. ^N\n"
 
 #: src/help.c:132
@@ -1597,17 +1616,17 @@ msgstr "[ Appuyez <ESPACE> pour continuer ou <RetArr> pour la page précédente 
 #: src/intf.c:110
 #, c-format
 msgid "%s: string has incorrect format: '%s'"
-msgstr "%s: la chaîne a un format incorrect: « %s »"
+msgstr "%s: la chaîne a un format incorrect: « %s »"
 
 #: src/intf.c:126
 #, c-format
 msgid "%s: character has illegal width: '%lc'"
-msgstr "%s: caractère avec une largeur illégale: « %lc »"
+msgstr "%s: caractère avec une largeur illégale: « %lc »"
 
 #: src/intf.c:434
 #, c-format
 msgid "terminal size is too small (%d x %d required)"
-msgstr "la taille du terminal est trop petite (%d x %d requis)"
+msgstr "la taille du terminal est trop petite (%d × %d requis)"
 
 #: src/intf.c:1265
 #, c-format
@@ -1617,7 +1636,7 @@ msgstr "mkchstr_conv: NUL"
 #: src/intf.c:1568
 #, c-format
 msgid "mkchstr: '%s'"
-msgstr "mkchstr: « %s »"
+msgstr "mkchstr: « %s »"
 
 #. TRANSLATORS: This string specifies the keycodes used to insert the
 #. default value into the input string, if entered as the very first
@@ -1632,7 +1651,7 @@ msgstr "=;"
 #: src/intf.c:2034 src/intf.c:2079
 #, c-format
 msgid "gettxline: illegal character in string: '%ls'"
-msgstr "gettxline: caractère illégal dans la chaîne: « %ls »"
+msgstr "gettxline: caractère illégal dans la chaîne: « %ls »"
 
 #. TRANSLATORS: The strings with msgctxt "input|Yes" and
 #. "input|No" contain the keycodes used to determine whether a
@@ -1678,7 +1697,7 @@ msgstr "pas assez de mémoire"
 #: src/utils.c:1041
 #, c-format
 msgid "xmbstowcs: '%s'"
-msgstr "xmbstowcs: « %s »"
+msgstr "xmbstowcs: « %s »"
 
 #: src/utils.c:1081
 #, c-format
@@ -1688,54 +1707,39 @@ msgstr "xwcrtomb: NUL"
 #: src/utils.c:1086
 #, c-format
 msgid "xwcrtomb: '%lc'"
-msgstr "xwcrtomb: « %lc »"
+msgstr "xwcrtomb: « %lc »"
 
 #: lib/getopt.c:278
 #, c-format
 msgid "%s: option '%s%s' is ambiguous\n"
-msgstr "%s: l'option « %s%s » est ambiguë\n"
+msgstr "%s: l'option « %s%s » est ambiguë\n"
 
 #: lib/getopt.c:284
 #, c-format
 msgid "%s: option '%s%s' is ambiguous; possibilities:"
-msgstr "%s: l'option « %s%s » est ambiguë; les possibilités sont:"
+msgstr "%s: l'option « %s%s » est ambiguë; les possibilités sont:"
 
 #: lib/getopt.c:319
 #, c-format
 msgid "%s: unrecognized option '%s%s'\n"
-msgstr "%s: option « %s%s » non reconnue\n"
+msgstr "%s: option « %s%s » non reconnue\n"
 
 #: lib/getopt.c:345
 #, c-format
 msgid "%s: option '%s%s' doesn't allow an argument\n"
-msgstr "%s: l'option « %s%s » n'accepte pas d'argument\n"
+msgstr "%s: l'option « %s%s » n'accepte pas d'argument\n"
 
 #: lib/getopt.c:360
 #, c-format
 msgid "%s: option '%s%s' requires an argument\n"
-msgstr "%s: l'option « %s%s » exige un argument\n"
+msgstr "%s: l'option « %s%s » exige un argument\n"
 
 #: lib/getopt.c:621
 #, c-format
 msgid "%s: invalid option -- '%c'\n"
-msgstr "%s: option invalide -- « %c »\n"
+msgstr "%s: option invalide -- « %c »\n"
 
 #: lib/getopt.c:636 lib/getopt.c:682
 #, c-format
 msgid "%s: option requires an argument -- '%c'\n"
-msgstr "%s: l'option exige un argument -- « %c »\n"
-
-#~ msgid "%s: option '--%s' doesn't allow an argument\n"
-#~ msgstr "%s: option « --%s » n'accepte pas d'argument\n"
-
-#~ msgid "%s: unrecognized option '--%s'\n"
-#~ msgstr "%s: option « --%s » non reconnue\n"
-
-#~ msgid "%s: option '-W %s' is ambiguous\n"
-#~ msgstr "%s: option « -W %s » est ambiguë\n"
-
-#~ msgid "%s: option '-W %s' doesn't allow an argument\n"
-#~ msgstr "%s: option « -W %s » n'accepte pas d'argument\n"
-
-#~ msgid "%s: option '-W %s' requires an argument\n"
-#~ msgstr "%s: option « -W %s » exige un argument\n"
+msgstr "%s: l'option exige un argument -- « %c »\n"
