--- a/po/da.po
+++ b/po/da.po
@@ -12,10 +12,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: trader 7.10-pre2\n"
+"Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2017-05-24 20:36+1000\n"
-"PO-Revision-Date: 2017-05-24 08:33+1000\n"
+"PO-Revision-Date: 2017-06-02 05:26+1000\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "Language: da\n"
