--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,12 @@ browse  the Git repository on  The ZAP Group  web server  at the following
 location: http://www.zap.org.au/gitweb/trader.git
 
 
+Version 7.12 (not yet released)
+-------------------------------
+
+Updated the Serbian translation, with thanks to Мирослав Николић.
+
+
 Version 7.11 (18th June, 2017)
 ------------------------------
 
