Update the release date: today!

--- a/NEWS
+++ b/NEWS
@@ -15,8 +15,8 @@ browse  the Git repository on  The ZAP Group  web server  at the following
 location: http://www.zap.org.au/gitweb/trader.git
 
 
-Version 7.12 (not yet released)
--------------------------------
+Version 7.12 (24th August, 2017)
+--------------------------------
 
 Updated the Serbian translation, with thanks to Мирослав Николић.
 
