Add the HTTP protocol URL in addition to FTP for downloading Star Traders

--- a/doc/trader.6
+++ b/doc/trader.6
@@ -206,6 +206,8 @@ Australia
 .URL http://www.zap.org.au/software/trader/
 .IP FTP: 10n
 .FTP ftp://ftp.zap.org.au/pub/trader/
+.br
+.URL http://ftp.zap.org.au/pub/trader/
 .PD
 .PP
 .\" *********************************************************************
