Start preparing for version 7.13

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,12 @@ browse  the Git repository on  The ZAP Group  web server  at the following
 location: http://www.zap.org.au/gitweb/trader.git
 
 
+Version 7.13 (not yet released)
+-------------------------------
+
+(No news yet)
+
+
 Version 7.12 (24th August, 2017)
 --------------------------------
 
